# Hackerschool-Challenges-Solutions

./: .gitignore  .replit  README.md  hangman.py  main.py  pyproject.toml  uebung3.py
Cheatsheets/: Cheatsheet.md
hangman/: hangman.py
Übungen/: Übung1.md  Übung2.md  Übung3.md
