[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Stefan Langer <stefan.langer@payback.net>, Michael Mellenthin <michael.mellenthin@payback.net>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"